--- a/client/parties.html
+++ b/client/parties.html
@@ -13,6 +13,11 @@
       <div class="span4">
         <h3 style="margin-bottom: 0px">All Tomorrow's Parties</h3>
       </div>
+      <div class="span5">
+        <div style="float: right">
+          {{loginButtons align="right"}}
+        </div>
+      </div>
     </div>
     <div class="row">
       <div class="span5">
