step2 rsvp fix horizontal layout

--- a/client/parties.html
+++ b/client/parties.html
@@ -23,7 +23,7 @@
       <div class="span5">
         {{> map}}
       </div>
-      <div class="span4">
+      <div class="offset1 span4">
         {{> details}}
       </div>
     </div>
